test/parser/unknown_token.1.err
INVALID_TOKEN[1000] in test/parser/unknown_token.1.pytch, line 1, character 1:
Error: Invalid token '&&&&'.
   +-----------------------------------+
   | test/parser/unknown_token.1.pytch |
 1 | &&&&                              |
   | ^~~~ Error: Invalid token '&&&&'. |
   +-----------------------------------+
EXPECTED_EXPRESSION[1010] in test/parser/unknown_token.1.pytch, line 1, character 1:
Error: I was expecting an expression, but instead got the invalid token '&&&&'.
   +------------------------------------------------------------------------+
   | test/parser/unknown_token.1.pytch                                      |
 1 | &&&&                                                                   |
   | ^~~~ Error: I was expecting an expression, but instead got the invalid |
   | token '&&&&'.                                                          |
   +------------------------------------------------------------------------+
